@@ -1,3 +1,7 @@
+Fri Jan  4 15:50:25 CET 2002 Daniel Veillard <daniel@veillard.com>
+
+	* xsltproc/xsltproc.c: increased the max number of parameters
+
 Thu Dec 20 14:54:27 CET 2001 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt.pc.in configure.in: added pkg-config file from Rodrigo Moya
